src/parsers/snapshots/meshb__parsers__mail_parser__tests__nook_period.snap
---
source: src/parsers/mail_parser.rs
expression: "node_3d_coords(\" 1,2  23.3 233\")"
---
Err(
    Error(
        Base {
            location: ",2  23.3 233",
            kind: Expected(
                Multispace,
            ),
        },
    ),
)
