src/parsers/snapshots/meshb__parsers__mail_parser__tests__ok_1.snap
---
source: src/parsers/mail_parser.rs
expression: "node_or_cell_name(\"N12\")"
---
Ok(
    (
        "",
        "N12",
    ),
)
