src/parsers/snapshots/meshb__parsers__mail_parser__tests__should_parse_node_3d_coords-6.snap
---
source: src/mail_parser.rs
expression: "node_3d_coords(\"   1\\n  2 3 \")"
---
Ok(
    (
        "",
        [
            1.0,
            2.0,
            3.0,
        ],
    ),
)
