src/parsers/snapshots/meshb__parsers__mail_parser__tests__start_gma_section_should_work.snap
---
source: src/mail_parser.rs
expression: "start_gma_section(\"GROUP_MA\")"
---
Ok(
    (
        "",
        Cell,
    ),
)
