src/parsers/snapshots/meshb__parsers__mail_parser__tests__start_node_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "start_3d_node_section(\"COOR_3D\")"
---
Ok(
    (
        "",
        "COOR_3D",
    ),
)
